force-app/main/default/objects/OrderItem/fields/ARC_Sage_itemkey__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_itemkey__c</fullName>
    <description>Product item key</description>
    <formula>Product2.ItemKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Key</label>
    <type>Text</type>
</CustomField>