force-app/main/default/objects/OrderItem/fields/ARC_Sage_ItemMap_SubHeadingI__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_ItemMap_SubHeadingI__c</fullName>
    <formula>Product2.ARC_Sage_ItemMap_SubHeadingI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Subheading Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>