force-app/main/default/objects/OrderItem/fields/ARC_Sage_LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_LongDesc__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Long Description</label>
    <type>Text</type>
</CustomField>