force-app/main/default/objects/OrderItem/fields/Item_Heading__c.field-meta.xml
<CustomField>
    <fullName>Item_Heading__c</fullName>
    <description>Item heading from Product object</description>
    <formula>Product2.ARC_Sage_Item_Heading_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Heading</label>
    <type>Text</type>
</CustomField>